--- a/index.html
+++ b/index.html
@@ -133,7 +133,71 @@
     </main>
 </div>
 
+<div id="rate_and_check_task" class="view">
+    <header><div class="bubble2"><div class="filler"></div><div class="greeting"><h1>Hey, superstar!</h1>
+        <p>Rate your overall experience for <span id="rate_task_title" class="inline_title"></span>:</p></div></div>
+    </header>
+    <main>
 
+        <form id="form_rate_task" class="form-horizontal">
+            <fieldset>
+                <!-- Multiple Radios --- ACUTAL DIFFICULTY-->
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="f_a_difficulty">Actual Difficulty</label>
+                    <div id="f_a_difficulty" class="col-md-4 difficulty" data-difficulty="6">
+                        <div name="5" class="trapez trapez_1 grey"></div>
+                        <div name="4" class="trapez trapez_2 grey"></div>
+                        <div name="3" class="trapez trapez_3 grey"></div>
+                        <div name="2" class="trapez trapez_4 grey"></div>
+                        <div name="1" class="trapez trapez_5 grey"></div>
+                    </div>
+                </div>
+
+
+                <!-- Multiple Radios (inline)--- ACTUAL SATISFACTION -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="f_a_satisfaction">Actual Satisfaction</label>
+                    <div class="col-md-4" id="f_a_satisfaction_group">
+                        <label id="f_a_satisfaction" class="radio-inline" for="f_a_satisfaction-0">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-0" value="indifferent" type="radio" required>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="indifferent"></div></div>
+                        </label>
+                        <label class="radio-inline" for="f_a_satisfaction-1">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-1" value="glad" type="radio">
+                            <div class="satisfaction"><div name="satisfaction_emo" class="glad"></div></div>
+                        </label>
+                        <label class="radio-inline" for="f_a_satisfaction-2">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-2" value="wink" type="radio">
+                            <div class="satisfaction"><div name="satisfaction_emo" class="wink"></div></div>
+                        </label>
+                        <label class="radio-inline" for="f_a_satisfaction-3">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-3" value="laughing" type="radio">
+                            <div class="satisfaction"><div name="satisfaction_emo" class="laughing"></div></div>
+                        </label>
+                        <label class="radio-inline" for="f_a_satisfaction-4">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-4" value="king" type="radio">
+                            <div class="satisfaction"><div name="satisfaction_emo" class="king"></div></div>
+                        </label>
+                        <label class="radio-inline" for="f_a_satisfaction-5">
+                            <input name="f_a_satisfaction" id="f_a_satisfaction-5" value="pirate" type="radio">
+                            <div class="satisfaction"><div name="satisfaction_emo" class="pirate"></div></div>
+                        </label>
+                    </div>
+                </div>
+                <!-- Text input --- ACTUAL DURATION / INVESTED TIME -->
+                <div class="form-group">
+                    <label class="col-md-4 control-label" for="f_a_duration2">Total time invested</label>
+                    <div class="col-md-4">
+                        <input id="f_a_duration2" name="f_a_duration2" placeholder="0m" data-seconds="0" class="duration form-control input-md" type="text">
+                    </div>
+                </div>
+            </fieldset>
+            <div name="rate-task-button" class="btn btn-primary" data-view="list_view">Done!</div>
+            <div name="reset-rate-task-form" class="btn btn-default" data-view="list_view">cancel</div>
+        </form>
+
+    </main>
+</div>
 
 <div id="preferences_view" class="view">
     <header><div class="bubble"><div class="filler"></div><div class="greeting">
@@ -225,20 +289,10 @@
                     </div>
                 </div>
 
-                <!--
-                                    <div class="difficulty">
-                        <div class="trapez trapez_1 grey"></div>
-                        <div class="trapez trapez_2 grey"></div>
-                        <div class="trapez trapez_3"></div>
-                        <div class="trapez trapez_4"></div>
-                        <div class="trapez trapez_5"></div>
-                        <div class="description">difficulty</div>
-                    </div>
-                --!>
                 <!-- Multiple Radios --- PREDICTED DIFFICULTY-->
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="f_p_difficulty">Predicted Difficulty</label>
-                    <div id="f_p_difficulty" class="col-md-4 difficulty" data-pdifficulty="6">
+                    <div id="f_p_difficulty" class="col-md-4 difficulty" data-difficulty="6">
                         <div name="5" class="trapez trapez_1 grey"></div>
                         <div name="4" class="trapez trapez_2 grey"></div>
                         <div name="3" class="trapez trapez_3 grey"></div>
@@ -252,29 +306,29 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="f_p_satisfaction">Predicted Satisfaction</label>
                     <div class="col-md-4" id="f_p_satisfaction_group">
-                        <label class="radio-inline" for="f_p_satisfaction-0">
-                            <input name="f_p_satisfaction" id="f_p_satisfaction-0" value="indifferent" checked="checked" type="radio" required>
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="indifferent grey"></div></div>
+                        <label id="f_p_satisfaction" class="radio-inline" for="f_p_satisfaction-0">
+                            <input name="f_p_satisfaction" id="f_p_satisfaction-0" value="indifferent" type="radio" required>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="indifferent"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-1">
                             <input name="f_p_satisfaction" id="f_p_satisfaction-1" value="glad" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="glad grey"></div></div>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="glad"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-2">
                             <input name="f_p_satisfaction" id="f_p_satisfaction-2" value="wink" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="wink grey"></div></div>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="wink"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-3">
                             <input name="f_p_satisfaction" id="f_p_satisfaction-3" value="laughing" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="laughing grey"></div></div>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="laughing"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-4">
                             <input name="f_p_satisfaction" id="f_p_satisfaction-4" value="king" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="king grey"></div></div>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="king"></div></div>
                         </label>
                         <label class="radio-inline" for="f_p_satisfaction-5">
                             <input name="f_p_satisfaction" id="f_p_satisfaction-5" value="pirate" type="radio">
-                            <div class="satisfaction"><div name="f_p_satisfaction_emo" class="pirate grey"></div></div>
+                            <div class="satisfaction"><div name="satisfaction_emo" class="pirate"></div></div>
                         </label>
                     </div>
                 </div>
@@ -311,7 +365,7 @@
                 <!-- Multiple Radios (inline) --- PRIORITY -->
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="f_priority">Priority</label>
-                    <div class="col-md-4">
+                    <div id="f_priority" class="col-md-4">
                         <label class="radio-inline" for="f_priority-0">
                             <input name="f_priority" id="f_priority-0" value="1" type="radio">
                             <span>High</span>
