refactoring and bugfixes for rate and finish task

--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
     </header>
     <main>
 
-        <form id="form_rate_task" class="form-horizontal">
+        <form id="form_rate_task" class="form-horizontal" data-key="">
             <fieldset>
                 <!-- Multiple Radios --- ACUTAL DIFFICULTY-->
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="f_a_difficulty">Actual Difficulty</label>
 
-                    <div id="f_a_difficulty" class="col-md-4 difficulty" data-difficulty="6">
+                    <div id="f_a_difficulty" class="col-md-4 difficulty" data-difficulty="0">
                         <div name="5" class="trapez trapez_1 grey"></div>
                         <div name="4" class="trapez trapez_2 grey"></div>
                         <div name="3" class="trapez trapez_3 grey"></div>
@@ -382,7 +382,7 @@
                 <div class="form-group">
                     <label class="col-md-4 control-label" for="f_p_difficulty">Predicted Difficulty</label>
 
-                    <div id="f_p_difficulty" class="col-md-4 difficulty" data-difficulty="6">
+                    <div id="f_p_difficulty" class="col-md-4 difficulty" data-difficulty="0">
                         <div name="5" class="trapez trapez_1 grey"></div>
                         <div name="4" class="trapez trapez_2 grey"></div>
                         <div name="3" class="trapez trapez_3 grey"></div>
@@ -792,7 +792,6 @@
 <script type="text/javascript" src="js/hammer.js"></script>
 <script type="text/javascript" src="js/form.js"></script>
 <script type="text/javascript" src="js/storage.js"></script>
-<script type="text/javascript" src="js/tasklist.js"></script>
 <script type="text/javascript" src="js/views.js"></script>
 
 
