--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
             <div class="filler"></div>
             <div class="greeting"><h1>Hi-Diddily-Ho Champ!</h1>
 
-                <p>Do you have <a href="#">15 minutes</a>? Check out <a href="#">these awesome tasks</a>: </p></div>
+                <!-- Select Basic --- CATEGORY / LABEL -->
+                <div class="form-group">
+                        <p>Check out these
+                        <select id="decision_helper" name="decision_helper" class="form-control">
+                            <option value="important" >AWESOME</option>
+                            <option value="random">RANDOM</option>
+                            <option value="health">Health</option>
+                            <option value="home">Home</option>
+                            <option value="work">Work</option>
+                            <option value="school">School</option>
+                        </select> tasks!
+                    </p>
+                </div>
+
+                </div>
         </div>
     </header>
 
     <main>
-        <ul class="tasks">
+        <ul class="tasks" id="ul_startview_tasks">
 
             <li class="task cat_work">
                 <div class="top_row">
