decision maker selection styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="greeting"><h1>Hi-Diddily-Ho Champ!</h1>
 
                 <!-- Select Basic --- CATEGORY / LABEL -->
-                <div class="form-group">
+                <div>
                         <p>Check out these
                         <select id="decision_helper" name="decision_helper" class="form-control">
                             <option value="important" >AWESOME</option>
